src/test/ui/issues/issue-2937.stderr
error[E0432]: unresolved import `m::f`
  --> $DIR/issue-2937.rs:1:5
   |
LL | use m::f as x; //~ ERROR unresolved import `m::f` [E0432]
   |     ^^^^^^^^^ no `f` in `m`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
